pkg/analyzer/testdata/02-ingress-with-forwardauth.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-forwardauth
  namespace: default
  annotations:
    # Forward auth - Supported since Traefik v3.6
    nginx.ingress.kubernetes.io/auth-url: "http://whoami.default.svc/"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Foo"
    # Forward auth signin - Supported since Traefik v3.7
    nginx.ingress.kubernetes.io/auth-signin: "https://login.example.com/oauth2/start"
    # Forward auth method - NOT supported by Traefik
    nginx.ingress.kubernetes.io/auth-method: "GET"

spec:
#  ingressClassName: nginx
  rules:
    - host: forwardauth.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
