pkg/analyzer/testdata/05-ingress-with-default-backend-no-rules.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-default-backend-no-rules
  namespace: default

spec:
#  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami-default-backend2
      port:
        number: 80
