pkg/analyzer/testdata/05-ingress-with-default-backend-rule-host.yml

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-default-backend-rule-host
  namespace: default

spec:
#  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami-default-backend
      port:
        number: 80

  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
