pkg/analyzer/testdata/07-ingress-with-proxy-ssl.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-proxy-ssl
  namespace: default
  annotations:
    # Proxy SSL and backend - Supported since Traefik v3.6
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # HTTP, HTTPS, AUTO_HTTP, GRPC, GRPCS and FCGI
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "default/ingress-with-proxy-ssl"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "whoami.localhost"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "whoami.localhost"
    # Proxy SSL verify depth - NOT supported by Traefik
    nginx.ingress.kubernetes.io/proxy-ssl-verify-depth: "1"

spec:
#  ingressClassName: nginx
  rules:
    - host: proxy-ssl.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami-tls
                port:
                  number: 443

---
kind: Secret
apiVersion: v1
metadata:
  namespace: default
  name: ingress-with-proxy-ssl

data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0t
