pkg/analyzer/testdata/14-ingress-with-mirror.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-mirror
  namespace: default
  annotations:
    # Traffic mirroring annotations - NOT supported by Traefik
    nginx.ingress.kubernetes.io/mirror-target: "http://whoami-mirror.default.svc.cluster.local"
    nginx.ingress.kubernetes.io/mirror-request-body: "on"
    nginx.ingress.kubernetes.io/mirror-uri: "/mirror"
spec:
  ingressClassName: nginx
  rules:
    - host: mirror.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
