pkg/analyzer/testdata/17-ingress-with-opentracing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-opentracing
  namespace: default
  annotations:
    # OpenTracing annotations - NOT supported by Traefik
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/opentracing-operation-name: "HTTP $request_method $uri"
    nginx.ingress.kubernetes.io/opentracing-trust-incoming-span: "true"
    nginx.ingress.kubernetes.io/zipkin-collector-host: "zipkin.tracing.svc.cluster.local"
    nginx.ingress.kubernetes.io/zipkin-collector-port: "9411"
    nginx.ingress.kubernetes.io/zipkin-service-name: "nginx"
    nginx.ingress.kubernetes.io/jaeger-collector-host: "jaeger-collector.tracing.svc.cluster.local"
    nginx.ingress.kubernetes.io/jaeger-collector-port: "14268"
    nginx.ingress.kubernetes.io/jaeger-service-name: "nginx"
    nginx.ingress.kubernetes.io/jaeger-propagation-format: "jaeger"
    nginx.ingress.kubernetes.io/jaeger-sampler-type: "const"
    nginx.ingress.kubernetes.io/jaeger-sampler-param: "1"
spec:
  ingressClassName: nginx
  rules:
    - host: opentracing.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
