pkg/analyzer/testdata/19-ingress-with-app-root-redirect.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-app-root
  namespace: default
  annotations:
    # Path matching - Supported since Traefik v3.6
    nginx.ingress.kubernetes.io/use-regex: "true"
    # App root - Supported since Traefik v3.7
    nginx.ingress.kubernetes.io/app-root: "/app"
    # Redirect annotations - Supported since Traefik v3.7
    nginx.ingress.kubernetes.io/permanent-redirect: "https://newdomain.example.com$request_uri"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/temporal-redirect: "https://maintenance.example.com"
    nginx.ingress.kubernetes.io/temporal-redirect-code: "307"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: approot.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
