pkg/analyzer/testdata/20-ingress-without-annotations.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-vanilla
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: basicauth.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-vanilla2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: basicauth.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80


---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-vanilla3
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: basicauth.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
