pkg/analyzer/testdata/24-ingress-with-allowlist.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-allowlist
  namespace: default
  annotations:
    # IP allowlist - Supported since Traefik v3.7
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12"
spec:
  ingressClassName: nginx
  rules:
    - host: allowlist.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-allowlist-new-syntax
  namespace: default
  annotations:
    # IP allowlist (new syntax) - Supported since Traefik v3.7
    nginx.ingress.kubernetes.io/allowlist-source-range: "192.168.1.0/24"
spec:
  ingressClassName: nginx
  rules:
    - host: allowlist-new.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
