pkg/analyzer/testdata/27-ingress-with-proxy-next-upstream.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-proxy-next-upstream
  namespace: default
  annotations:
    # Proxy next upstream - Supported since Traefik v3.7
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: proxy-next-upstream.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
